SERVER-26593 decrement usage counter in ScopedCollectionMetadata's move constructor